Error handling beim login

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -2,3 +2,4 @@
 <input placeholder="Email" [(ngModel)]="email"/>
 <input type="password" placeholder="password" [(ngModel)]="password">
 <button (click)="logIn()">Anmelden</button>
+<p *ngIf="error">{{error}}</p>
