--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,5 +1,17 @@
-<h1>Login</h1>
-<input placeholder="Email" [(ngModel)]="email"/>
-<input type="password" placeholder="password" [(ngModel)]="password">
-<button (click)="logIn()">Anmelden</button>
-<p *ngIf="error">{{error}}</p>
+<div class="container text-center">
+    <div class="row justify-content-center ">
+      <div class="col col-sm-10 col-lg-5 ">
+        <h1>Login</h1>
+        <div class="input-group mb-3">
+          <span class="input-group-text">&#64;</span>
+          <input type="text" class="form-control" placeholder="E-Mail" aria-label="E-Mail" [(ngModel)]="email">
+        </div>
+        <div class="input-group mb-3">
+          <span class="input-group-text"><i class="bi bi-key-fill"></i></span>
+          <input type="password" class="form-control" placeholder="Passwort" aria-label="Passwort" [(ngModel)]="password">
+        </div>
+        <button class="btn btn-primary mb-3" (click)="logIn()">Anmelden</button>
+        <div class="alert alert-warning" *ngIf="error">{{error}}</div>
+      </div>
+    </div>
+</div>
