--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,7 +1,8 @@
 <div class="container text-center">
     <div class="row justify-content-center ">
       <div class="col col-sm-10 col-lg-5 ">
-        <h1>Login</h1>
+        <img ngSrc="./assets/images/fsrlogo_white.svg" class="img-fluid" height="2534" width="4000" alt="fsrlogo">
+        <h1 class="mt-2 mb-3">E-Key-Manager</h1>
         <div class="input-group mb-3">
           <span class="input-group-text">&#64;</span>
           <input type="text" class="form-control" placeholder="E-Mail" aria-label="E-Mail" [(ngModel)]="email">
