--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li>
+        <li>
+          <a class="nav-link" href="/ausleihe">Ausleihe starten</a>
+        </li>
 
       </ul>
       <div *ngIf="user$ | async as user" class="d-flex flex-column">
