ausleihe seite erstellt

--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -18,6 +18,9 @@
         <li>
           <a class="nav-link" href="/ekey-list">E-Keys</a>
         </li>
+        <li>
+          <a class="nav-link" href="/ausleihe">Ausleihe starten</a>
+        </li>
 
       </ul>
       <div *ngIf="user$ | async as user" class="d-flex flex-column">
