student ausleihe form jetzt template

--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -1,17 +1,20 @@
-<form action="/ausleihebeantragen" method="post">
 
-  <label for="vorname">Vorname:</label>
-  <input id="vorname" type="text" name="vorname" class="form-control" required autofocus>
+<div [hidden]="studentsubmitted">
+<form (ngSubmit)="onSubmit()" #ausleihForm="ngForm">
+<div class="form-group">
+  <label for="vorname">Nachname:</label>
+  <input name="vorname" type="text" [(ngModel)]="model.vorname" class="form-control" required autofocus>
   <br>
   <label for="nachname">Nachname:</label>
-  <input name="nachname" type="text" name="nachname" class="form-control" required>
+  <input name="nachname" type="text" [(ngModel)]="model.nachname" class="form-control" required>
   <br>
   <label for="mail">Email:</label>
-  <input name="mail" type="text" name="mail" placeholder="...@stud.fh-dortmund.de" type="email" pattern="\w+.\w+\d{3}@stud.fh.dortmund.de" class="form-control" required>
+  <input name="mail" type="email" [(ngModel)]="model.studmail" placeholder="...@stud.fh-dortmund.de" pattern="...@stud.fh-dortmund.de" type="email" pattern="\w+.\w+\d{3}@stud.fh.dortmund.de" class="form-control" required>
   <br>
     <label for="matrikelnummer">Matrikelnummer:</label>
-  <input name="matrikelnummer" type="text" name="matrikelnummer" pattern="\d{7}" class="form-control" required>
+  <input name="matrikelnummer" type="text" [(ngModel)]="model.MatrNr" pattern="\d{7}" class="form-control" required>
   <br>
-
-  <button type="submit" class="btn btn-primary"> Ausleihe beginnen</button>
-</form>
+  <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+</div>
+  </form>
+</div>
