--- a/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -1,17 +1,57 @@
-<div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">E-Key hinzufügen</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
-</div>
+  <div class="modal-body">
+    <form>
+      <div class="input-group mb-3">
+        <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
+        <input [(ngModel)]="ekey.ekeyID" type="text" class="form-control" placeholder="E-Key-ID" aria-label="E-Key-ID">
+      </div>
+
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-person-fill"></i></label>
+        <select [(ngModel)]="ekey.besitzer" class="form-select" id="inputGroupSelect01">
+          <option selected>Besitzer</option>
+          <option value="FSR">FSR</option>
+          <option value="ausgeliehen">ausgeliehen</option>
+          <option value="verloren">verloren</option>
+        </select>
+      </div>
+
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-minecart-loaded"></i></label>
+        <select [(ngModel)]="ekey.status" class="form-select" id="inputGroupSelect02">
+          <option selected>Status</option>
+          <option value="defekt">defekt</option>
+          <option value="gesperrt">gesperrt</option>
+          <option value="funktioniert">funktioniert</option>
+        </select>
+      </div>
+
+      <div class="input-group mb-3">
+        <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-shield-check"></i></label>
+        <select [(ngModel)]="ekey.berechtigung" class="form-select" id="inputGroupSelect03">
+          <option selected>Berechtigung</option>
+          <option value="STUD">STUD</option>
+          <option value="FSRF">FSRF</option>
+          <option value="FSR">FSR</option>
+        </select>
+      </div>
+
+
+      <div class="input-group">
+        <span class="input-group-text"><i class="bi bi-pencil-square"></i></span>
+        <textarea [(ngModel)]="ekey.notiz" class="form-control" placeholder="Notizen" aria-label="Notizen"></textarea>
+      </div>
+
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="createEkey()">Save</button>
+  </div>
+</ng-template>
+
+<button class="btn btn-primary" (click)="open(content)">E-Key hinzufügen</button>
+
