--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -49,7 +49,7 @@
     </form>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-secondary" (click)="createEkey()">Save</button>
+    <button type="button" class="btn btn-secondary" (click)="saveEkey()">Save</button>
   </div>
 </ng-template>
 
