db struktur von jan + ekey änderung

--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -22,7 +22,7 @@
 
       <div class="input-group mb-3">
         <label class="input-group-text" for="inputGroupSelect01"><i class="bi bi-minecart-loaded"></i></label>
-        <select [(ngModel)]="ekey.status" class="form-select" id="inputGroupSelect02">
+        <select [(ngModel)]="ekey.zustand" class="form-select" id="inputGroupSelect02">
           <option selected>Status</option>
           <option value="defekt">defekt</option>
           <option value="gesperrt">gesperrt</option>
