--- a/angular-frontend/src/app/ekey-list/ekey-list.component.html
+++ b/angular-frontend/src/app/ekey-list/ekey-list.component.html
@@ -19,7 +19,7 @@
         <div class="row">
           <div class="col">{{ ekey.ekeyID }}</div>
           <div class="col">{{ ekey.besitzer }}</div>
-          <div class="col">{{ekey.status }}</div>
+          <div class="col">{{ekey.zustand }}</div>
           <div class="col">{{ ekey.berechtigung }}</div>
           <div class="col">{{ ekey.notiz }}</div>
         </div>
