--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -7,7 +7,7 @@
     <form>
       <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"><i class="bi bi-key-fill"></i></span>
-        <input [(ngModel)]="ekey.ekeyID" type="text" class="form-control" placeholder="E-Key-ID" aria-label="E-Key-ID">
+        <input [(ngModel)]="ekey.ekeyid" type="text" class="form-control" placeholder="E-Key-ID" aria-label="E-Key-ID">
       </div>
 
       <div class="input-group mb-3">
