--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -9,11 +9,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="/">Dashboard</a>
+        </li>
+        <li>
+          <a class="nav-link" href="/ausleihe">Ausleihe starten</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+        <li>
+          <a class="nav-link" href="/ekey-list">E-Keys</a>
         </li>
 
       </ul>
