--- a/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
+++ b/angular-frontend/src/app/ekey-list/create-ekey-modal/create-ekey-modal.component.html
@@ -16,7 +16,7 @@
         <select formControlName="besitzer" class="form-select" id="inputGroupSelect01">
           <option selected>Besitzer</option>
           <option value="FSR">FSR</option>
-          <option value="Student">ausgeliehen</option>
+          <option value="Student">Student</option>
           <option value="verloren">verloren</option>
         </select>
       </div>
