Rückgabe component und navbar

--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -16,6 +16,10 @@
         </li>
 
         <li>
+          <a class="nav-link" href="/rückgabe">Rückgabe</a>
+        </li>
+
+        <li>
           <a class="nav-link" href="/ekey-list">E-Keys</a>
         </li>
 
