--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -1,20 +1,54 @@
 
-<div [hidden]="studentsubmitted">
-<form (ngSubmit)="onSubmit()" #ausleihForm="ngForm">
-<div class="form-group">
-  <label for="vorname">Nachname:</label>
-  <input name="vorname" type="text" [(ngModel)]="model.vorname" class="form-control" required autofocus>
-  <br>
-  <label for="nachname">Nachname:</label>
-  <input name="nachname" type="text" [(ngModel)]="model.nachname" class="form-control" required>
-  <br>
-  <label for="mail">Email:</label>
-  <input name="mail" type="email" [(ngModel)]="model.studmail" placeholder="...@stud.fh-dortmund.de" pattern="...@stud.fh-dortmund.de" type="email" pattern="\w+.\w+\d{3}@stud.fh.dortmund.de" class="form-control" required>
-  <br>
-    <label for="matrikelnummer">Matrikelnummer:</label>
-  <input name="matrikelnummer" type="text" [(ngModel)]="model.MatrNr" pattern="\d{7}" class="form-control" required>
-  <br>
-  <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+<div [hidden]="step!=0">
+<form (ngSubmit)="onStudentsubmit()" #ausleihForm="ngForm">
+  <div class="form-group">
+    <label for="vorname">Nachname:</label>
+    <input name="vorname" type="text" [(ngModel)]="student.vorname" class="form-control" required autofocus>
+    <br>
+    <label for="nachname">Nachname:</label>
+    <input name="nachname" type="text" [(ngModel)]="student.nachname" class="form-control" required>
+    <br>
+    <label for="mail">Email:</label>
+    <input name="mail" type="email" [(ngModel)]="student.email" placeholder="...@stud.fh-dortmund.de" pattern="...@stud.fh-dortmund.de" type="email" pattern="\w+.\w+\d{3}@stud.fh.dortmund.de" class="form-control" required>
+    <br>
+      <label for="matrikelnummer">Matrikelnummer:</label>
+    <input name="matrikelnummer" type="text" [(ngModel)]="student.matrnr" pattern="\d{7}" class="form-control" required>
+    <br>
+    <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+  </div>
+</form>
 </div>
+
+<div [hidden]="step!=1">
+  <form (ngSubmit)="onKeySumbmit()" #ausleihForm2="ngForm">
+    <div class="form-group">
+      <label for="keyid">E-Key ID:</label>
+      <input name="keyid" type="keyid" [(ngModel)]="ekey.ekeyid" class="form-control" pattern=".{9}" required autofocus>
+
+      <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm2.form.valid"> Ausleihe beginnen</button>
+    </div>
   </form>
+</div>
+
+
+<div [hidden]="step!=2">
+  hier ist dein PDF, jetzt druck es und lass es ausfüllen
+  <br>Name:{{student.vorname}} {{student.nachname}}
+  <br>Mail:{{student.email}}
+  <br> Matrikelnummer: {{student.matrnr}}
+  <br>möchte den Ekey
+  <br>
+  {{ekey.ekeyid}} ausleihen.
+  <label for="note">E-Key ID:</label>
+  <input name="note" type="text" [(ngModel)]="ausleihenotiz" class="form-control"   autofocus>
+  <button (click)="submit()" class="btn btn-primary" > Ausleihe druchführen</button>
+</div>
+
+<div [hidden]="step!=3">
+  great Success!
+  <br>
+  <a href="/">
+    <button class="btn btn-primary">Zurück zum Dashboard</button>
+  </a>
+
 </div>
