ausgabe von TXT datei mit allen mails

--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -22,6 +22,9 @@
         <li>
           <a class="nav-link" href="/ekey-list">E-Keys</a>
         </li>
+        <li>
+          <a class="nav-link" href="/rückmeldung">Rückmeldung</a>
+        </li>
 
       </ul>
       <div *ngIf="user$ | async as user" class="d-flex flex-column">
