--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-md bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img ngSrc="./assets/images/fsrlogokeintext.svg" alt="FSR-Logo" height="24" width="65">
@@ -12,7 +12,7 @@
           <a class="nav-link" aria-current="page" href="/">Dashboard</a>
         </li>
         <li>
-          <a class="nav-link" href="/ausleihe">Ausleihe starten</a>
+          <a class="nav-link" href="/ausleihe">Ausleihe </a>
         </li>
 
         <li>
@@ -28,7 +28,7 @@
 
       </ul>
       <div *ngIf="user$ | async as user" class="d-flex flex-column">
-        <span class="m-0 p-0">Angemelet als {{user.email}}</span>
+        <span class="m-0 p-0">{{user.email}}</span>
         <button class="btn btn-link text-end m-0 p-0" (click)="logOut()">Abmelden</button>
       </div>
 
