--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="user$ | async as user" >
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/">Dashboard</a>
@@ -27,9 +27,9 @@
         </li>
 
       </ul>
-      <div *ngIf="user$ | async as user" class="d-flex flex-column">
-        <span class="m-0 p-0">{{user.email}}</span>
-        <button class="btn btn-link text-end m-0 p-0" (click)="logOut()">Abmelden</button>
+      <div *ngIf="user$ | async as user" class="d-flex flex-column ">
+        <span class="m-0 p-0 text-end" >{{user.email}}</span>
+        <button class="btn btn-link m-0 p-0 text-end" (click)="logOut()">Abmelden</button>
       </div>
 
     </div>
