--- a/angular-frontend/src/app/navbar/navbar.component.html
+++ b/angular-frontend/src/app/navbar/navbar.component.html
@@ -1,18 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-body-tertiary" >
+  <div class="container-fluid" >
     <a class="navbar-brand" href="#">
       <img ngSrc="./assets/images/fsrlogokeintext.svg" alt="FSR-Logo" height="24" width="65">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" *ngIf="user$ | async as user">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="/">Dashboard</a>
         </li>
         <li>
-          <a class="nav-link" href="/ausleihe">Ausleihe starten</a>
+          <a class="nav-link" href="/ausleihe">Ausleihe</a>
         </li>
 
         <li>
@@ -27,7 +27,7 @@
         </li>
 
       </ul>
-      <div *ngIf="user$ | async as user" class="d-flex flex-column">
+      <div class="d-flex flex-column">
         <span class="m-0 p-0">Angemelet als {{user.email}}</span>
         <button class="btn btn-link text-end m-0 p-0" (click)="logOut()">Abmelden</button>
       </div>
