rückgabe auswahl schöner gemacht

--- a/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
+++ b/angular-frontend/src/app/rueckgabe/rueckgabe.component.html
@@ -2,16 +2,16 @@
   <div class="row justify-content-center ">
     @if (showAusleihe === false) {
       <div class="col col-sm-10 col-lg-5 ">
-        <h1 class="mt-2 mb-3">Rückgabe-Guide</h1>
+        <h1 class="mt-2 mb-3">Rückgabe</h1>
         <form [formGroup]="rueckgabe" (ngSubmit)="getAusleihe()">
           <div>
-            <!--<input type="radio" class="btn-check" id="option1" autocomplete="off" formControlName="rueckgabeNachMatrNr"
+            <input type="radio" class="btn-check" id="option1" autocomplete="off" formControlName="rueckgabeNachMatrNr"
                    [value]="false">
-            <label class="btn btn-secondary m-2" for="option1" (click)="rueckgabe.reset()">nach KeyId</label>
--->
-            <input type="radio" class="btn-check" id="option2" autocomplete="off" formControlName="rueckgabeNachMatrNr"
+            <label class="btn btn-outline-primary m-2 disabled" for="option1" (click)="rueckgabe.reset()">nach KeyId</label>
+
+            <input type="radio" class="btn-check" id="option2" checked autocomplete="off" formControlName="rueckgabeNachMatrNr"
                    [value]="true">
-            <label class="btn btn-secondary m-2" for="option2" (click)="rueckgabe.reset()">nach MatNr</label>
+            <label class="btn btn-outline-primary m-2" for="option2"  (click)="rueckgabe.reset()">nach MatNr</label>
           </div>
 
           @if (rueckgabe.value.rueckgabeNachMatrNr === true) {
