--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -1,22 +1,34 @@
-
 <div [hidden]="step!=0">
-<form (ngSubmit)="onStudentsubmit()" #ausleihForm="ngForm">
-  <div class="form-group">
-    <label for="vorname">Vorname:</label>
-    <input name="vorname" type="text" [(ngModel)]="student.vorname" class="form-control" required autofocus>
-    <br>
-    <label for="nachname">Nachname:</label>
-    <input name="nachname" type="text" [(ngModel)]="student.nachname" class="form-control" required>
-    <br>
-    <label for="mail">Email:</label>
-    <input name="mail" type="email" [(ngModel)]="student.email" placeholder="...@stud.fh-dortmund.de" pattern="...@stud.fh-dortmund.de" type="email" pattern="\w+.\w+\d{3}@stud.fh.dortmund.de" class="form-control" required>
-    <br>
-      <label for="matrikelnummer">Matrikelnummer:</label>
-    <input name="matrikelnummer" type="text" [(ngModel)]="student.matrnr" pattern="\d{7}" class="form-control" required>
-    <br>
-    <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
-  </div>
-</form>
+  <form (ngSubmit)="onStudentsubmit()" #ausleihForm="ngForm">
+    <h1 class="mt-2 mb-3 text-center">Ausleihe</h1>
+    <div class="form-group">
+      <label for="vorname">Vorname</label>
+      <input name="vorname" type="text" [(ngModel)]="student.vorname" class="form-control" required autofocus>
+      <br>
+      <label for="nachname">Nachname</label>
+      <input name="nachname" type="text" [(ngModel)]="student.nachname" class="form-control" required>
+      <br>
+
+      <label for="mail">Email</label>
+      <div class="input-group mb-3">
+        <input name="mail"
+               [(ngModel)]="student.email"
+               placeholder="henry.campuskatzer001"
+               type="email"
+               pattern="\w+.\w+\d{3}"
+               class="form-control"
+               required>
+        <span class="input-group-text" id="basic-addon2">&#64;stud.fh-dortmund.de</span>
+      </div>
+
+      <br>
+      <label for="matrikelnummer">Matrikelnummer</label>
+      <input name="matrikelnummer" type="text" [(ngModel)]="student.matrnr" pattern="\d{7}" class="form-control"
+             required>
+      <br>
+      <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+    </div>
+  </form>
 </div>
 
 <div [hidden]="step!=1">
@@ -33,15 +45,15 @@
 
 <div [hidden]="step!=2">
   hier ist dein PDF, jetzt druck es und lass es ausfüllen
-  <br>Name:{{student.vorname}} {{student.nachname}}
-  <br>Mail:{{student.email}}
-  <br> Matrikelnummer: {{student.matrnr}}
+  <br>Name:{{ student.vorname }} {{ student.nachname }}
+  <br>Mail:{{ student.email }}
+  <br> Matrikelnummer: {{ student.matrnr }}
   <br>möchte den Ekey
   <br>
-  {{ekey.ekeyid}} ausleihen.
+  {{ ekey.ekeyid }} ausleihen.
   <label for="note">E-Key ID:</label>
-  <input name="note" type="text" [(ngModel)]="ausleihenotiz" class="form-control"   autofocus>
-  <button (click)="submit()" class="btn btn-primary" > Ausleihe druchführen</button>
+  <input name="note" type="text" [(ngModel)]="ausleihenotiz" class="form-control" autofocus>
+  <button (click)="submit()" class="btn btn-primary"> Ausleihe druchführen</button>
 </div>
 
 <div [hidden]="step!=3">
