--- a/angular-frontend/src/app/ausleihe/ausleihe.component.html
+++ b/angular-frontend/src/app/ausleihe/ausleihe.component.html
@@ -1,66 +1,91 @@
-<div [hidden]="step!=0">
-  <form (ngSubmit)="onStudentsubmit()" #ausleihForm="ngForm">
-    <h1 class="mt-2 mb-3 text-center">Ausleihe</h1>
-    <div class="form-group">
-      <label for="vorname">Vorname</label>
-      <input name="vorname" type="text" [(ngModel)]="student.vorname" class="form-control" required autofocus>
-      <br>
-      <label for="nachname">Nachname</label>
-      <input name="nachname" type="text" [(ngModel)]="student.nachname" class="form-control" required>
-      <br>
+<div class="container">
+  <div class="row justify-content-center ">
+    <div class="col col-sm-11 col-lg-7">
+      <h1 class="mt-2 mb-3 text-center">Ausleihe</h1>
 
-      <label for="mail">Email</label>
-      <div class="input-group mb-3">
-        <input name="mail"
-               [(ngModel)]="student.email"
-               placeholder="henry.campuskatzer001"
-               type="email"
-               pattern="\w+.\w+\d{3}"
-               class="form-control"
-               required>
-        <span class="input-group-text" id="basic-addon2">&#64;stud.fh-dortmund.de</span>
+        <form (ngSubmit)="onStudentsubmit()" #ausleihForm="ngForm" [hidden]="step!=0">
+          <div class="form-group">
+
+            <input name="vorname" type="text" [(ngModel)]="student.vorname" class="form-control" required autofocus>
+
+            <div class="input-group has-validation">
+              <span class="input-group-text">V</span>
+              <div class="form-floating is-invalid">
+                <input type="text" class="form-control is-invalid" id="floatingInputGroup2" placeholder="Vorname" required>
+                <label for="vorname">Vorname</label>
+              </div>
+              <div class="invalid-feedback" >
+                Vorname muss gesetzt werden
+              </div>
+            </div>
+
+            <label for="nachname">Nachname</label>
+            <input name="nachname" type="text" [(ngModel)]="student.nachname" class="form-control" required>
+            <br>
+
+
+            <label for="mail">Email</label>
+            <div class="input-group mb-3">
+              <input name="mail"
+                     [(ngModel)]="student.email"
+                     placeholder="henry.campuskatzer001"
+                     type="email"
+                     pattern="\w+.\w+\d{3}"
+                     class="form-control"
+                     required>
+              <span class="input-group-text" id="basic-addon2">&#64;stud.fh-dortmund.de</span>
+            </div>
+
+
+            <br>
+            <label for="matrikelnummer">Matrikelnummer</label>
+            <input name="matrikelnummer" type="text" [(ngModel)]="student.matrnr" pattern="\d{7}" class="form-control"
+                   required>
+            <br>
+
+
+            <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+          </div>
+        </form>
+
+
+      <div [hidden]="step!=1">
+        <form (ngSubmit)="onKeySumbmit()" #ausleihForm2="ngForm">
+          <div class="form-group">
+            <label for="keyid">E-Key ID:</label>
+            <input name="keyid" type="text" [(ngModel)]="ekey.ekeyid" class="form-control" pattern=".{9}" required
+                   autofocus>
+
+            <br>
+            <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm2.form.valid"> Ausleihe beginnen
+            </button>
+          </div>
+        </form>
       </div>
 
-      <br>
-      <label for="matrikelnummer">Matrikelnummer</label>
-      <input name="matrikelnummer" type="text" [(ngModel)]="student.matrnr" pattern="\d{7}" class="form-control"
-             required>
-      <br>
-      <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm.form.valid"> Ausleihe beginnen</button>
+
+      <div [hidden]="step!=2">
+        hier ist dein PDF, jetzt druck es und lass es ausfüllen
+        <br>Name:{{ student.vorname }} {{ student.nachname }}
+        <br>Mail:{{ student.email }}
+        <br> Matrikelnummer: {{ student.matrnr }}
+        <br>möchte den Ekey
+        <br>
+        {{ ekey.ekeyid }} ausleihen.
+        <label for="note">E-Key ID:</label>
+        <input name="note" type="text" [(ngModel)]="ausleihenotiz" class="form-control" autofocus>
+        <br>
+        <button (click)="submit()" class="btn btn-primary"> Ausleihe druchführen</button>
+      </div>
+
+      <div [hidden]="step!=3">
+        great Success!
+        <br>
+        <a href="/">
+          <button class="btn btn-primary">Zurück zum Dashboard</button>
+        </a>
+
+      </div>
     </div>
-  </form>
-</div>
-
-<div [hidden]="step!=1">
-  <form (ngSubmit)="onKeySumbmit()" #ausleihForm2="ngForm">
-    <div class="form-group">
-      <label for="keyid">E-Key ID:</label>
-      <input name="keyid" type="text" [(ngModel)]="ekey.ekeyid" class="form-control" pattern=".{9}" required autofocus>
-
-      <button type="submit" class="btn btn-primary" [disabled]="!ausleihForm2.form.valid"> Ausleihe beginnen</button>
-    </div>
-  </form>
-</div>
-
-
-<div [hidden]="step!=2">
-  hier ist dein PDF, jetzt druck es und lass es ausfüllen
-  <br>Name:{{ student.vorname }} {{ student.nachname }}
-  <br>Mail:{{ student.email }}
-  <br> Matrikelnummer: {{ student.matrnr }}
-  <br>möchte den Ekey
-  <br>
-  {{ ekey.ekeyid }} ausleihen.
-  <label for="note">E-Key ID:</label>
-  <input name="note" type="text" [(ngModel)]="ausleihenotiz" class="form-control" autofocus>
-  <button (click)="submit()" class="btn btn-primary"> Ausleihe druchführen</button>
-</div>
-
-<div [hidden]="step!=3">
-  great Success!
-  <br>
-  <a href="/">
-    <button class="btn btn-primary">Zurück zum Dashboard</button>
-  </a>
-
+  </div>
 </div>
